--- a/hackedin/build.gradle
+++ b/hackedin/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
+        classpath "io.realm:realm-gradle-plugin:10.6.0"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
