--- a/hackedin/app/src/main/AndroidManifest.xml
+++ b/hackedin/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hackedin">
-        <activity android:name=".home"></activity>
+        <activity android:name=".Edit"></activity>
+        <activity
+            android:name=".home"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.Hackedin.NoActionBar" />
         <activity android:name=".Login" />
         <activity android:name=".MainActivity">
             <intent-filter>
