--- a/hackedin/app/src/main/AndroidManifest.xml
+++ b/hackedin/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         <activity android:name=".Edit"></activity>
         <activity
             android:name=".home"
-            android:label="@string/title_activity_home"
-            android:theme="@style/Theme.Hackedin.NoActionBar" />
+            android:label="@string/title_activity_home" />
         <activity android:name=".Login" />
         <activity android:name=".MainActivity">
             <intent-filter>
