--- a/hackedin/app/src/main/AndroidManifest.xml
+++ b/hackedin/app/src/main/AndroidManifest.xml
@@ -15,12 +15,13 @@
         <activity
             android:name=".home"
             android:label="@string/title_activity_home"
-            android:theme="@style/Theme.Hackedin.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+
+        />
         <activity android:name=".Login" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
