--- a/hackedin/app/src/main/AndroidManifest.xml
+++ b/hackedin/app/src/main/AndroidManifest.xml
@@ -29,6 +29,12 @@
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".home" />
         </activity>
+        <activity android:name=".History"
+            android:parentActivityName=".home">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".home" />
+        </activity>
     </application>
 
 </manifest>
