--- a/hackedin/app/src/main/AndroidManifest.xml
+++ b/hackedin/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         </activity>
         <activity android:name=".Login" />
         <activity
-            android:name=".home"
-            android:label="@string/title_activity_home" >
+            android:name=".home">
         </activity>
 
         <activity android:name=".Edit"
